Update image to use jdk-11
- use the openjdk-11 package
- add JVM properties required to run on JDK 11